Fix android deps

--- a/package.json
+++ b/package.json
@@ -5,6 +5,18 @@
   "author": "Ansel Santosa (ansel@santosa.family)",
   "bugs": "https://github.com/anstosa/ferry.fyi/issues",
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^2.1.0",
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor-community/keep-awake": "^2.1.1",
+    "@capacitor-community/screen-brightness": "^1.0.1",
+    "@capacitor/android": "^3.4.3",
+    "@capacitor/app": "^1.1.1",
+    "@capacitor/cli": "^3.4.3",
+    "@capacitor/core": "^3.4.3",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/share": "^1.1.2",
+    "@capacitor/status-bar": "^1.0.8",
     "auth0": "^2.40.0",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
@@ -28,18 +40,6 @@
   },
   "devDependencies": {
     "@auth0/auth0-react": "^1.9.0",
-    "@capacitor-community/barcode-scanner": "^2.1.0",
-    "@capacitor-community/http": "^1.4.1",
-    "@capacitor-community/keep-awake": "^2.1.1",
-    "@capacitor-community/screen-brightness": "^1.0.1",
-    "@capacitor/android": "^3.4.3",
-    "@capacitor/app": "^1.1.1",
-    "@capacitor/cli": "^3.4.3",
-    "@capacitor/core": "^3.4.3",
-    "@capacitor/device": "^1.1.2",
-    "@capacitor/geolocation": "^1.3.1",
-    "@capacitor/share": "^1.1.2",
-    "@capacitor/status-bar": "^1.0.8",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
@@ -173,7 +173,7 @@
   "repository": "anstosa/ferry.fyi.git",
   "scripts": {
     "build": "yarn build:client && yarn build:server",
-    "build:android": ". android/.envrc; webpack --config client/webpack.config.ts && direnv allow",
+    "build:android": ". ./android/.envrc && webpack --config client/webpack.config.ts && direnv allow",
     "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
     "build:server": "NODE_ENV=production webpack --config server/webpack.config.ts",
     "clean": "rm -rf dist/*",
@@ -199,7 +199,7 @@
     "lint:js:server": "cd server && eslint --ext .ts,.tsx .",
     "lint:js:server:fix": "yarn lint:js:server --fix",
     "postinstall": "rm -rf node_modules/.cache/webpack",
-    "start:android": "npx cap run android",
+    "start:android": ". ./android/.envrc && npx cap run android",
     "start:client": "NODE_ENV=development webpack serve --config client/webpack.config.ts --progress",
     "start:server": "cd server && ts-node devServer.ts",
     "type-check": "yarn type-check:client && yarn type-check:server",
