--- a/.envrc.sample
+++ b/.envrc.sample
@@ -25,6 +25,7 @@ export MAPBOX_ACCESS_TOKEN="<get from mapbox>"
 
 # Android
 export ANDROID_SDK_ROOT="/home/ansto/Android/Sdk"
+export ANDROID_CERT_FINGNERPRINT="<get from android keystore>"
 
 # Auth0
 export AUTH0_DOMAIN="<get from auth0>"
@@ -33,3 +34,7 @@ export AUTH0_SERVER_SECRET="<get from auth0>"
 export AUTH0_SERVER_AUDIENCE="<get from auth0>"
 export AUTH0_CLIENT_ID="<get from auth0>"
 export AUTH0_CLIENT_AUDIENCE="<get from auth0>"
+export AUTH0_CLIENT_REDIRECT="http://localhost:3000/callback"
+
+# Sentry
+export SENTRY_DSN="<get from sentry>"
