--- a/android/.envrc.sample
+++ b/android/.envrc.sample
@@ -19,3 +19,7 @@ export MAPBOX_ACCESS_TOKEN="<get from mapbox>"
 export AUTH0_DOMAIN="<get from auth0>"
 export AUTH0_CLIENT_ID="<get from auth0>"
 export AUTH0_CLIENT_AUDIENCE="<get from auth0>"
+export AUTH0_CLIENT_REDIRECT="fyi.ferry://ferryfyi.us.auth0.com/capacitor/fyi.ferry/callback"
+
+# Sentry
+export SENTRY_DSN="<get from sentry>"
