--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "author": "Ansel Santosa (ansel@santosa.family)",
   "bugs": "https://github.com/anstosa/ferry.fyi/issues",
   "dependencies": {
+    "@byteowls/capacitor-oauth2": "^3.0.1",
     "@capacitor-community/barcode-scanner": "^2.1.0",
     "@capacitor-community/http": "^1.4.1",
     "@capacitor-community/keep-awake": "^2.1.1",
     "@capacitor-community/screen-brightness": "^1.0.1",
     "@capacitor/android": "^3.4.3",
     "@capacitor/app": "^1.1.1",
+    "@capacitor/browser": "^1.0.7",
     "@capacitor/cli": "^3.4.3",
     "@capacitor/core": "^3.4.3",
     "@capacitor/device": "^1.1.2",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "^1.0.8",
+    "@sentry/react": "^6.18.2",
+    "@sentry/tracing": "^6.18.2",
     "auth0": "^2.40.0",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
@@ -173,9 +177,9 @@
   "repository": "anstosa/ferry.fyi.git",
   "scripts": {
     "build": "yarn build:client && yarn build:server",
-    "build:android": ". ./android/.envrc && webpack --config client/webpack.config.ts && direnv allow",
-    "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
-    "build:server": "NODE_ENV=production webpack --config server/webpack.config.ts",
+    "build:android": ". ./android/.envrc && webpack --config client/webpack.config.ts --progress && cap sync && direnv allow",
+    "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts --progress",
+    "build:server": "NODE_ENV=production webpack --config server/webpack.config.ts --progress",
     "clean": "rm -rf dist/*",
     "db:migrate": "sequelize db:migrate",
     "db:reset": "./scripts/resetdb.sh",
