--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="www.ferry.fyi" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:host="ferry.fyi" />
+
             </intent-filter>
 
         </activity>
