optimizations and assetlinks

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@types/request-promise": "^4.1.47",
     "@types/scroll-into-view": "^1.6.7",
     "@types/sequelize": "^4.28.11",
+    "@types/speed-measure-webpack-plugin": "^1.3.4",
     "@types/stylelint": "^14.0.0",
     "@types/stylelint-webpack-plugin": "^2.1.0",
     "@types/tailwindcss": "^3.0.9",
@@ -109,11 +110,14 @@
     "css-loader": "^6.7.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "draft-js": "^0.11.7",
+    "esbuild-loader": "^2.18.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-standard": "^5.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "favicons": "6",
     "favicons-webpack-plugin": "^5.0.2",
@@ -126,6 +130,7 @@
     "jsbarcode": "^3.11.5",
     "mapbox-gl": "^2.7.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "mkdirp": "^1.0.4",
     "moots-capacitor-dark-mode": "^1.0.2",
     "ngrok": "^4.3.1",
     "node-env-run": "^4.0.2",
@@ -145,6 +150,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "scroll-into-view": "^1.15.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.5.3",
     "stylelint-config-prettier-scss": "^0.0.1",
@@ -155,11 +161,9 @@
     "stylelint-scss": "^4.1.0",
     "stylelint-webpack-plugin": "^3.1.1",
     "tailwindcss": "^3.0.23",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.2.7",
     "ts-node": "^10.7.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.6.2",
+    "typescript": "^4.6.0",
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
@@ -203,6 +207,7 @@
     "lint:js:server": "cd server && eslint --ext .ts,.tsx .",
     "lint:js:server:fix": "yarn lint:js:server --fix",
     "postinstall": "rm -rf node_modules/.cache/webpack",
+    "reinstall": "rm -rf node_modules client/node_modules server/node_modules shared/node_modules && yarn",
     "start:android": ". ./android/.envrc && npx cap run android",
     "start:client": "NODE_ENV=development webpack serve --config client/webpack.config.ts --progress",
     "start:server": "cd server && ts-node devServer.ts",
