Menu and reload feedback improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,8 @@
   "svg.preview.background": "custom",
   "[xml]": {
     "editor.defaultFormatter": "DotJoshJohnson.xml"
+  },
+  "[svg]": {
+    "editor.defaultFormatter": "jock.svg"
   }
 }
