--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/status-bar": "^1.0.8",
     "@sentry/react": "^6.18.2",
     "@sentry/tracing": "^6.18.2",
+    "@types/html-to-text": "^8.1.0",
     "auth0": "^2.40.0",
     "body-parser": "^1.19.2",
     "compression": "^1.7.4",
@@ -29,7 +30,11 @@
     "express-jwt": "^6.1.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-sslify": "^1.2.0",
+    "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
+    "git-revision-webpack-plugin": "^5.0.0",
     "heroku-logger": "^0.3.3",
+    "html-to-text": "^8.1.0",
     "jsdom": "^19.0.0",
     "jwks-rsa": "^2.0.5",
     "luxon": "^2.3.1",
@@ -44,6 +49,7 @@
   },
   "devDependencies": {
     "@auth0/auth0-react": "^1.9.0",
+    "@sentry/webpack-plugin": "^1.18.8",
     "@svgr/webpack": "^6.2.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
@@ -74,9 +80,9 @@
     "@types/node-fetch": "^2.6.1",
     "@types/node-schedule": "^1.3.2",
     "@types/nodemon": "^1.19.0",
-    "@types/pg": "^8.6.4",
+    "@types/pg": "^8.6.5",
     "@types/prettier": "^2.4.4",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-helmet": "^6.1.5",
     "@types/request": "^2.48.8",
@@ -98,8 +104,8 @@
     "@types/workbox-webpack-plugin": "^5.1.5",
     "@types/workbox-window": "^4.3.3",
     "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "@zxing/browser": "^0.1.1",
     "@zxing/library": "^0.19.1",
     "autoprefixer": "^10.4.2",
@@ -107,11 +113,11 @@
     "color-convert": "^2.0.1",
     "colors": "^1.4.0",
     "copy-webpack-plugin": "^10.2.4",
-    "css-loader": "^6.7.0",
+    "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "draft-js": "^0.11.7",
     "esbuild-loader": "^2.18.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -125,8 +131,8 @@
     "fork-ts-checker-webpack-plugin": "^7.2.1",
     "framer-motion": "^6.2.8",
     "html-webpack-plugin": "^5.5.0",
-    "http-proxy-middleware": "^2.0.3",
-    "jotai": "^1.6.0",
+    "http-proxy-middleware": "^2.0.4",
+    "jotai": "^1.6.1",
     "jsbarcode": "^3.11.5",
     "mapbox-gl": "^2.7.0",
     "mini-css-extract-plugin": "^2.6.0",
@@ -135,7 +141,7 @@
     "ngrok": "^4.3.1",
     "node-env-run": "^4.0.2",
     "nodemon": "^2.0.15",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.8",
     "postcss-loader": "^6.2.1",
     "postcss-scss": "^4.0.3",
     "prettier": "^2.5.1",
