--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -11,4 +11,5 @@ ext {
     androidxJunitVersion = '1.1.3'
     androidxEspressoCoreVersion = '3.4.0'
     cordovaAndroidVersion = '7.0.0'
+    firebaseMessagingVersion = '23.0.2'
 }
