--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "^3.4.3",
     "@capacitor/device": "^1.1.2",
     "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/push-notifications": "^1.0.9",
     "@capacitor/share": "^1.1.2",
     "@capacitor/status-bar": "^1.0.8",
     "@sentry/react": "^6.18.2",
